# ataxx-zero

./: .dockerignore  .env.example  .gitignore  .railwayignore  Dockerfile  Dockerfile.train  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pyrefly.toml  skills-lock.json  train.py  train_improved.py
.github/workflows/: build-app-image.yml  build-train-image.yml  ci-api.yml  ci-train.yml  ci-web.yml  ci.yml  deploy-railway-app.yml  train-runpod-reconcile.yml  train-runpod-start.yml
alembic/: env.py
alembic/versions/: 20260222_0001_initial_schema.py  476fb61b6b10_rating_event_ladder_transition_fields.py  8f2a3d1c4b9e_add_botprofile_table.py  c3d52d7a1b90_add_queueentry_table.py  d4a9f17e2c31_add_game_created_by_user.py
docs/: bot-accounts-phase1-plan.md
infra/runpod-train/: Pulumi.yaml  README.md  __main__.py  requirements.txt
scripts/: bootstrap_active_season.py  bootstrap_heuristic_bots.py  bootstrap_model_bot.py  check_onnx_parity.py  compare_checkpoints.py  db.ps1  export_model_onnx.py  play_pygame.py  update_checkpoint_league.py
src/: .railway_ci_deploy_stamp
src/agents/: __init__.py  heuristic.py  selector.py  types.py
src/api/: __init__.py  app.py  error_handling.py  inference_artifacts.py  observability.py
src/data/: dataset.py  replay_buffer.py
src/engine/: mcts.py
src/game/: actions.py  board.py  constants.py  serialization.py
src/inference/: checkpoint_duel_runtime.py  service.py
src/model/: system.py  transformer.py
src/training/: bootstrap.py  curriculum.py  (+10 more)
tests/: test_action_space.py  test_agents_selector.py  test_api_auth_datetime_naive.py  test_api_auth_integration.py  test_api_auth_rate_limit.py  test_api_db_connection_config.py  test_api_db_models.py  test_api_e2e_student_flow.py  test_api_error_handling.py  test_api_gameplay_repository_unit.py  test_api_gameplay_router_unit.py  test_api_gameplay_ws_integration.py  test_api_games.py  test_api_games_integration.py  test_api_games_service_resilient_list.py  test_api_health.py  test_api_identity_integration.py  test_api_inference_artifacts.py  test_api_inference_dep.py  test_api_matches_bots_integration.py  test_api_matches_integration.py  test_api_matchmaking_integration.py  test_api_model_versions_integration.py  test_api_move.py  test_api_openapi_auth.py  test_api_ranking_integration.py  test_api_settings_security.py  test_api_training_samples_integration.py  test_api_web_ui.py  test_board_rules.py  test_board_serialization.py  test_dataset_numerics.py  test_inference_checkpoint_duel_runtime.py  test_inference_service.py  test_matches_service_authorization.py  test_matches_service_model_inference.py  test_mcts_numerics.py  test_model_numerics.py  test_ranking_service_ladder.py  test_replay_buffer_numerics.py  (+11 more)
web/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
(+136 files in other folders)
